--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 liabraries like Bootstrp & React Js. </p>
 
             <div class="main-btn">
-                <a href="c:\Users\Admin\Downloads\Manish Chandrakant Bhagat (Resume).docx" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1SLGSbsnJynFWRrbmB85dXn_QLyntbfps/view?usp=drive_link" class="btn">Download CV</a>
                 <a href="./Hire-me.html" class="btn two">Hire Me Now</a>
             </div>
         </div>
